# DjangoTodoProject

./: README.md  pyproject.toml
todo_manager/templates/: base.html  index.html
todo_manager/templates/components/: navbar.html
todo_manager/todo_list/: admin.py  apps.py  models.py  urls.py  views.py
todo_manager/todo_list/migrations/: 0001_initial.py
todo_manager/todo_list/templates/todo_list/: base.html  index.html  todoitem_detail.html  todoitem_list.html
todo_manager/todo_list/templates/todo_list/components/: todo_items_list.html
todo_manager/todo_manager/: settings.py  urls.py
